--- a/FoodTrucksMenus/FoodTrucksMenus/FoodTrucksMenus.csproj
+++ b/FoodTrucksMenus/FoodTrucksMenus/FoodTrucksMenus.csproj
@@ -15,4 +15,12 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Helpers\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
+
 </Project>
