ActualizandoData,Login de google para cliente

--- a/FoodTrucksMenus/FoodTrucksMenus/appsettings.json
+++ b/FoodTrucksMenus/FoodTrucksMenus/appsettings.json
@@ -6,6 +6,12 @@
     }
   },
   "AllowedHosts": "*",
+  "Authentication": {
+    "Google": {
+      "ClienteId": "480671362060-5jfof6so60oe7i7c9vof353vc5bhgenm.apps.googleusercontent.com",
+      "ClientSecret": "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"
+    }
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-3JTNGEK;Database=MiTruckDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
