--- a/FoodTrucksMenus/.editorconfig
+++ b/FoodTrucksMenus/.editorconfig
@@ -2,3 +2,12 @@
 
 # CS8618: Un campo que no acepta valores NULL debe contener un valor distinto de NULL al salir del constructor. Considere la posibilidad de declararlo como que admite un valor NULL.
 dotnet_diagnostic.CS8618.severity = silent
+
+# CS8602: Desreferencia de una referencia posiblemente NULL.
+dotnet_diagnostic.CS8602.severity = silent
+
+# CS8601: Posible asignación de referencia nula
+dotnet_diagnostic.CS8601.severity = silent
+
+# CS8604: Posible argumento de referencia nulo
+dotnet_diagnostic.CS8604.severity = silent
