--- a/FoodTrucksMenus/FoodTrucksMenus/FoodTrucksMenus.csproj
+++ b/FoodTrucksMenus/FoodTrucksMenus/FoodTrucksMenus.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Google.Apis.Auth" Version="1.54.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="6.0.11" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="6.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.11" />
@@ -20,6 +22,7 @@
 
   <ItemGroup>
     <Folder Include="Helpers\" />
+    <Folder Include="Views\User\" />
   </ItemGroup>
 
   <ItemGroup>
