--- a/FoodTrucksMenus/FoodTrucksMenus/FoodTrucksMenus.csproj
+++ b/FoodTrucksMenus/FoodTrucksMenus/FoodTrucksMenus.csproj
@@ -21,8 +21,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Helpers\" />
     <Folder Include="Views\User\" />
+    <Folder Include="wwwroot\Product\" />
   </ItemGroup>
 
   <ItemGroup>
