--- a/FoodTrucksMenus/FoodTrucksMenus/appsettings.json
+++ b/FoodTrucksMenus/FoodTrucksMenus/appsettings.json
@@ -13,7 +13,7 @@
     }
   },
   "ConnectionStrings": {
-    //"DefaultConnection": "Server=DESKTOP-3JTNGEK;Database=MiTruckDB;Trusted_Connection=True;MultipleActiveResultSets=true" Acer
-    "DefaultConnection": "Server=SQLDEV\\MSSQLSERVER01;Database=MiTruckDB;User Id=sa;Password=Adr180574;" //Lenovo
+    "DefaultConnection": "Server=DESKTOP-3JTNGEK;Database=MiTruckDB;Trusted_Connection=True;MultipleActiveResultSets=true"// Acer
+    //"DefaultConnection": "Server=SQLDEV\\MSSQLSERVER01;Database=MiTruckDB;User Id=sa;Password=Adr180574;" //Lenovo
   }
 }
